--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="max-w-7xl mx-auto">
                 <div class="flex flex-col md:flex-row justify-between items-end mb-12 lg:mb-16 gap-4">
                     <div class="w-full">
-                        <h2 class="text-4xl md:text-6xl font-bold mb-4 tracking-tighter italic">Selected Works</h2>
+                        <h2 class="text-4xl md:text-7xl font-extrabold mb-4 tracking-tight uppercase font-heading">Selected Works</h2>
                         <p class="text-gray-500 text-base md:text-lg">A curated list of my favorite projects.</p>
                     </div>
                     <div class="hidden md:block text-8xl font-black text-white/5 select-none">01</div>
@@ -149,7 +149,7 @@
     <footer class="py-12 md:py-20 px-6 border-t border-white/5 text-center">
         <div class="mb-6 md:mb-8 text-xl font-bold">J<span class="gradient-text">.</span>J</div>
         <p class="text-gray-500 text-[10px] md:text-sm tracking-widest leading-loose">
-            &copy; 2024 JESWIN JOSE. <br class="md:hidden"/> HANDCRAFTED WITH PASSION.
+            &copy; 2026 JESWIN JOSE. <br class="md:hidden"/> HANDCRAFTED WITH PASSION.
         </p>
     </footer>
 
