--- a/index.html
+++ b/index.html
@@ -111,16 +111,18 @@
                     <!-- Project 1 -->
                     <div class="glass group overflow-hidden rounded-[1.5rem] md:rounded-[2.5rem] p-3 md:p-4 hover:border-white/20 transition-all duration-500">
                         <div class="h-56 md:h-80 bg-zinc-900 rounded-[1.2rem] md:rounded-[2rem] mb-6 md:mb-8 flex items-center justify-center overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?auto=format&fit=crop&q=80&w=800" 
+                            <img src="mallufinance.jpg" 
                                  class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-1000 ease-out"
                                  alt="Neural Interface">
                         </div>
                         <div class="px-2 md:px-4 pb-4">
-                            <h3 class="text-2xl md:text-3xl font-bold mb-2 md:mb-3 tracking-tight">Neural Interface</h3>
-                            <p class="text-gray-400 mb-4 md:mb-6 text-sm md:text-lg">Concept design for a futuristic UI kit with high-performance animations.</p>
+                            <h3 class="text-2xl md:text-3xl font-bold mb-2 md:mb-3 tracking-tight">Finance Portal</h3>
+                            <p class="text-gray-400 mb-4 md:mb-6 text-sm md:text-lg">Vibrant design for a futuristic finance website with ultra smooth animations.</p>
                             <div class="flex gap-2 md:gap-3">
-                                <span class="text-[9px] md:text-[10px] px-3 md:px-4 py-1.5 bg-white/5 border border-white/10 rounded-full font-medium tracking-wider uppercase">Figma</span>
-                                <span class="text-[9px] md:text-[10px] px-3 md:px-4 py-1.5 bg-white/5 border border-white/10 rounded-full font-medium tracking-wider uppercase">Three.js</span>
+                                <span class="text-[9px] md:text-[10px] px-3 md:px-4 py-1.5 bg-white/5 border border-white/10 rounded-full font-medium tracking-wider uppercase">Html</span>
+                                <span class="text-[9px] md:text-[10px] px-3 md:px-4 py-1.5 bg-white/5 border border-white/10 rounded-full font-medium tracking-wider uppercase">Javascript</span>
+                                <span class="text-[9px] md:text-[10px] px-3 md:px-4 py-1.5 bg-white/5 border border-white/10 rounded-full font-medium tracking-wider uppercase">Tailwind CSS</span>
+                                <span class="text-[9px] md:text-[10px] px-3 md:px-4 py-1.5 bg-white/5 border border-white/10 rounded-full font-medium tracking-wider uppercase">React</span>
                             </div>
                         </div>
                     </div>
@@ -128,16 +130,18 @@
                     <!-- Project 2 -->
                     <div class="glass group overflow-hidden rounded-[1.5rem] md:rounded-[2.5rem] p-3 md:p-4 hover:border-white/20 transition-all duration-500">
                         <div class="h-56 md:h-80 bg-zinc-900 rounded-[1.2rem] md:rounded-[2rem] mb-6 md:mb-8 flex items-center justify-center overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1634017839464-5c339ebe3cb4?auto=format&fit=crop&q=80&w=800" 
+                            <img src="webartnet.jpg" 
                                  class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-1000 ease-out"
                                  alt="Crypto Pulse">
                         </div>
                         <div class="px-2 md:px-4 pb-4">
-                            <h3 class="text-2xl md:text-3xl font-bold mb-2 md:mb-3 tracking-tight">Crypto Pulse</h3>
+                            <h3 class="text-2xl md:text-3xl font-bold mb-2 md:mb-3 tracking-tight">Fullstack Saas project</h3>
                             <p class="text-gray-400 mb-4 md:mb-6 text-sm md:text-lg">Real-time data visualization dashboard for complex market analysis.</p>
                             <div class="flex gap-2 md:gap-3">
                                 <span class="text-[9px] md:text-[10px] px-3 md:px-4 py-1.5 bg-white/5 border border-white/10 rounded-full font-medium tracking-wider uppercase">React</span>
                                 <span class="text-[9px] md:text-[10px] px-3 md:px-4 py-1.5 bg-white/5 border border-white/10 rounded-full font-medium tracking-wider uppercase">D3.js</span>
+                                <span class="text-[9px] md:text-[10px] px-3 md:px-4 py-1.5 bg-white/5 border border-white/10 rounded-full font-medium tracking-wider uppercase">Tailwind css</span>
+                                <span class="text-[9px] md:text-[10px] px-3 md:px-4 py-1.5 bg-white/5 border border-white/10 rounded-full font-medium tracking-wider uppercase">n8n workflow</span>
                             </div>
                         </div>
                     </div>
