--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9630835038502007"
+     crossorigin="anonymous"></script>
 </head>
 <body class="antialiased bg-[#050505] text-white overflow-x-hidden">
     <!-- Preloader -->
@@ -83,7 +85,7 @@
                         With a focus on building high-performance applications and immersive user experiences, I bridge the gap between complex engineering and elegant design. I believe every line of code is an opportunity to solve a problem and create something meaningful.
                     </p>
                     <p>
-                        Expanding on this vision, I recently launched Mallu Finance India, a dedicated platform offering essential financial services including loans and credit cards. My goal with this project is to provide a secure environment where users can explore financial products from trusted, verified sources, ensuring that navigating the world of finance is as safe as it is accessible.
+                        
                     </p>
                     <div class="pt-8 grid grid-cols-2 gap-8">
                         <div>
@@ -113,9 +115,8 @@
                     </a>
                     <span class="w-12 h-px bg-white/20"></span>
                     <div class="flex gap-4">
-                        <a href="www.instagram.com/@jes2in_joss" class="text-white/40 hover:text-white transition-colors"><i class="fab fa-instagram"></i></a>
-                        <a href="https://github.com/jeswinjoss" class="text-white/40 hover:text-white transition-colors"><i class="fab fa-github"></i></a>
-                        <a href="https://www.linkedin.com/in/jeswin-jose-40a38b332/" class="text-white/40 hover:text-white transition-colors"><i class="fab fa-linkedin"></i></a>
+                        <a href="#" class="text-white/40 hover:text-white transition-colors"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="text-white/40 hover:text-white transition-colors"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </div>
