--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9630835038502007"
      crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-9630835038502007">
 </head>
 <body class="antialiased bg-[#050505] text-white overflow-x-hidden">
     <!-- Preloader -->
