--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
                         With a focus on building high-performance applications and immersive user experiences, I bridge the gap between complex engineering and elegant design. I believe every line of code is an opportunity to solve a problem and create something meaningful.
                     </p>
                     <p>
-                        
+                        Expanding on this vision, I recently launched Mallu Finance India, a dedicated platform offering essential financial services including loans and credit cards. My goal with this project is to provide a secure environment where users can explore financial products from trusted, verified sources, ensuring that navigating the world of finance is as safe as it is accessible.
                     </p>
                     <div class="pt-8 grid grid-cols-2 gap-8">
                         <div>
