--- a/about.html
+++ b/about.html
@@ -33,6 +33,7 @@
             <a href="index.html#work" class="hover:text-cyan-400 transition-colors duration-300">Work</a>
             <a href="index.html#contact" class="hover:text-cyan-400 transition-colors duration-300">Contact</a>
             <a href="about.html" class="text-cyan-400">Who am i ?</a>
+         <a href="mallufinance.html" class="hover:text-cyan-400 transition-colors duration-300">Organisation</a>
         </div>
         <div class="flex items-center gap-4">
             <a href="hello.html" class="hidden sm:block text-xs px-6 py-2.5 border border-white/20 rounded-full hover:bg-white hover:text-black transition-all duration-500 text-center">
@@ -50,6 +51,7 @@
         <a href="index.html#work" class="hover:text-cyan-400">Work</a>
         <a href="index.html#contact" class="hover:text-cyan-400">Contact</a>
         <a href="about.html" class="text-cyan-400">Who am i ?</a>
+     <a href="mallufinance.html" class="hover:text-cyan-400">Organisation</a>
         <a href="hello.html" class="text-xl text-cyan-400 border border-cyan-400/30 px-6 py-2 rounded-full">SAY HELLO</a>
     </div>
 
