--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
             J<span class="gradient-text">.</span>J
         </div>
         <div class="hidden md:flex space-x-12 text-xs uppercase tracking-[0.2em] font-medium">
-            <a href="#home" class="hover:text-cyan-400 transition-colors duration-300">Home</a>
+            <a href="#home" class="text-cyan-400">Home</a>
             <a href="#work" class="hover:text-cyan-400 transition-colors duration-300">Work</a>
             <a href="#contact" class="hover:text-cyan-400 transition-colors duration-300">Contact</a>
             <a href="about.html" class="hover:text-cyan-400 transition-colors duration-300">Who am i ?</a>
+         <a href="mallufinance.html" class="hover:text-cyan-400 transition-colors duration-300">Organisation</a>
         </div>
         <div class="flex items-center gap-4">
             <a href="hello.html" class="hidden sm:block text-xs px-6 py-2.5 border border-white/20 rounded-full hover:bg-white hover:text-black transition-all duration-500 text-center">
@@ -49,10 +50,11 @@
 
     <!-- Mobile Overlay -->
     <div id="mobile-menu" class="fixed inset-0 z-[90] bg-black hidden flex flex-col justify-center items-center gap-8 text-3xl font-bold">
-        <a href="#home" class="hover:text-cyan-400">Home</a>
+        <a href="#home" class="text-cyan-400">Home</a>
         <a href="#work" class="hover:text-cyan-400">Work</a>
         <a href="#contact" class="hover:text-cyan-400">Contact</a>
         <a href="about.html" class="hover:text-cyan-400">Who am i ?</a>
+     <a href="mallufinance.html" class="hover:text-cyan-400">Organisation</a>
         
         <a href="hello.html" class="text-xl text-cyan-400 border border-cyan-400/30 px-6 py-2 rounded-full">SAY HELLO</a>
     </div>
@@ -143,7 +145,7 @@
                         </div>
                         <div class="px-2 md:px-4 pb-4">
                             <h3 class="text-2xl md:text-3xl font-bold mb-2 md:mb-3 tracking-tight">Fullstack Saas project</h3>
-                            <p class="text-gray-400 mb-4 md:mb-6 text-sm md:text-lg">A efficent website and web app develop software that capable for designing,developing,hosting,debugging etc with help of Ai.</p>
+                            <p class="text-gray-400 mb-4 md:mb-6 text-sm md:text-lg">A efficent website and web app develop software powered by Ai</p>
                             <div class="flex gap-2 md:gap-3">
                                 <span class="text-[9px] md:text-[10px] px-3 md:px-4 py-1.5 bg-white/5 border border-white/10 rounded-full font-medium tracking-wider uppercase">React</span>
                                 <span class="text-[9px] md:text-[10px] px-3 md:px-4 py-1.5 bg-white/5 border border-white/10 rounded-full font-medium tracking-wider uppercase">D3.js</span>
