--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Jeswin Jose</title>
+    <meta name="description" content="Explore the portfolio of Jeswin Jose, a professional web developer and designer based in Kerala, India. Specializing in high-performance applications, UI/UX design, and innovative digital solutions like Mallu Finance.">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
