--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeswin Jose | Creative Portfolio</title>
+    <meta name="description" content="Explore the portfolio of Jeswin Jose, a professional web developer and designer based in Kerala, India. Specializing in high-performance applications, UI/UX design, and innovative digital solutions like Mallu Finance.">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -145,7 +146,7 @@
                         </div>
                         <div class="px-2 md:px-4 pb-4">
                             <h3 class="text-2xl md:text-3xl font-bold mb-2 md:mb-3 tracking-tight">Fullstack Saas project</h3>
-                            <p class="text-gray-400 mb-4 md:mb-6 text-sm md:text-lg">A efficent website and web app develop software powered by Ai</p>
+                            <p class="text-gray-400 mb-4 md:mb-6 text-sm md:text-lg">A efficent website and web app develop software that capable for designing,developing,hosting,debugging etc with help of Ai.</p>
                             <div class="flex gap-2 md:gap-3">
                                 <span class="text-[9px] md:text-[10px] px-3 md:px-4 py-1.5 bg-white/5 border border-white/10 rounded-full font-medium tracking-wider uppercase">React</span>
                                 <span class="text-[9px] md:text-[10px] px-3 md:px-4 py-1.5 bg-white/5 border border-white/10 rounded-full font-medium tracking-wider uppercase">D3.js</span>
