--- a/index.html
+++ b/index.html
@@ -21,127 +21,135 @@
     </script>
 </head>
 <body class="antialiased bg-dark text-white selection:bg-primary selection:text-dark">
-    <!-- Dynamic Background -->
+    <!-- Dynamic Background Optimized -->
     <div class="fixed inset-0 z-[-1] overflow-hidden pointer-events-none">
-        <div class="hero-blob top-[-10%] right-[-10%]"></div>
-        <div class="hero-blob bottom-[-10%] left-[-10%] bg-[#a29bfe]"></div>
+        <div class="hero-blob top-[-10%] right-[-10%] animate-soft-pulse"></div>
+        <div class="hero-blob bottom-[-10%] left-[-10%] bg-[#a29bfe] opacity-5 animate-soft-pulse" style="animation-delay: -5s"></div>
     </div>
 
     <!-- Preloader -->
-    <div id="loader" class="fixed inset-0 z-[200] bg-dark flex flex-col justify-center items-center transition-opacity duration-1000">
-        <div class="relative w-32 h-32">
+    <div id="loader" class="fixed inset-0 z-[200] bg-dark flex flex-col justify-center items-center transition-opacity duration-500">
+        <div class="relative w-24 h-24">
             <svg class="w-full h-full transform -rotate-90">
-                <circle cx="64" cy="64" r="60" stroke="currentColor" stroke-width="2" fill="transparent" class="text-white/5" />
-                <circle id="loader-circle" cx="64" cy="64" r="60" stroke="#00f2fe" stroke-width="2" fill="transparent" stroke-dasharray="377" stroke-dashoffset="377" class="transition-all duration-100" />
+                <circle cx="48" cy="48" r="45" stroke="currentColor" stroke-width="1" fill="transparent" class="text-white/5" />
+                <circle id="loader-circle" cx="48" cy="48" r="45" stroke="#00f2fe" stroke-width="2" fill="transparent" stroke-dasharray="283" stroke-dashoffset="283" class="transition-all duration-300" />
             </svg>
-            <div class="absolute inset-0 flex items-center justify-center font-bold tracking-tighter text-xl">
+            <div class="absolute inset-0 flex items-center justify-center font-bold tracking-tighter text-sm">
                 <span id="loader-percentage">0</span>
             </div>
         </div>
     </div>
 
-    <!-- Navigation -->
-    <nav class="fixed top-6 left-1/2 -translate-x-1/2 w-[90%] md:w-[80%] max-w-7xl z-[100] glass px-8 py-4 rounded-full flex justify-between items-center transition-all duration-500">
-        <div class="text-xl font-black tracking-tighter">
-            <a href="index.html">J<span class="text-primary">.</span>J</a>
-        </div>
-        <div class="hidden md:flex space-x-10 text-[10px] uppercase tracking-[0.3em] font-bold">
-            <a href="#home" class="nav-link text-primary">Home</a>
-            <a href="#work" class="nav-link">Work</a>
-            <a href="about.html" class="nav-link">About</a>
-            <a href="mallufinance.html" class="nav-link">Organisation</a>
-        </div>
-        <div class="flex items-center gap-6">
-            <a href="hello.html" class="hidden sm:block text-[10px] font-black tracking-widest px-6 py-2 bg-white text-dark rounded-full hover:bg-primary hover:scale-105 transition-all">
-                SAY HELLO
-            </a>
-            <button id="mobile-menu-btn" class="md:hidden text-2xl">
-                <i class="fa-solid fa-bars-staggered"></i>
-            </button>
-        </div>
-    </nav>
+    <!-- Island Header -->
+    <header class="fixed top-6 left-1/2 -translate-x-1/2 z-[100] w-[90%] max-w-5xl">
+        <nav id="island-nav" class="bg-black/40 backdrop-blur-xl border border-white/10 rounded-full px-6 py-3 flex justify-between items-center transition-all duration-500 shadow-2xl">
+            <div class="text-xl font-black tracking-tighter">
+                <a href="index.html">J<span class="text-primary">.</span>J</a>
+            </div>
+            <div class="hidden md:flex space-x-8 text-[10px] uppercase tracking-[0.3em] font-bold">
+                <a href="#home" class="nav-link text-primary">Home</a>
+                <a href="#work" class="nav-link">Work</a>
+                <a href="about.html" class="nav-link">About</a>
+                <a href="mallufinance.html" class="nav-link">Organisation</a>
+            </div>
+            <div class="flex items-center gap-4">
+                <a href="hello.html" class="hidden sm:block text-[10px] font-black tracking-widest px-5 py-2 border border-white/10 rounded-full hover:bg-white hover:text-dark transition-all">
+                    SAY HELLO
+                </a>
+                <button id="mobile-menu-btn" class="md:hidden text-xl w-10 h-10 flex items-center justify-center rounded-full bg-white/5">
+                    <i class="fa-solid fa-bars-staggered"></i>
+                </button>
+            </div>
+        </nav>
+    </header>
 
-    <!-- Mobile Menu -->
-    <div id="mobile-menu" class="fixed inset-0 z-[150] bg-dark hidden flex-col justify-center items-center gap-10 p-12">
-        <button class="absolute top-10 right-10 text-3xl" id="menu-close"><i class="fa-solid fa-xmark"></i></button>
-        <a href="#home" class="text-5xl font-black">HOME</a>
-        <a href="#work" class="text-5xl font-black">WORK</a>
-        <a href="about.html" class="text-5xl font-black">ABOUT</a>
-        <a href="mallufinance.html" class="text-5xl font-black text-primary">MALLU FI</a>
+    <!-- Redesigned Mobile Menu Slider -->
+    <div id="mobile-menu" class="fixed inset-y-0 right-0 w-full sm:w-[400px] z-[150] bg-dark/95 backdrop-blur-2xl translate-x-full transition-transform duration-500 ease-expo flex flex-col p-12 border-l border-white/5">
+        <div class="flex justify-between items-center mb-16">
+            <span class="text-xs font-bold tracking-widest text-gray-500 uppercase">Navigation</span>
+            <button class="text-2xl hover:rotate-90 transition-transform duration-300" id="menu-close"><i class="fa-solid fa-xmark"></i></button>
+        </div>
+        <div class="flex flex-col gap-8">
+            <a href="#home" class="mobile-link text-5xl font-black tracking-tighter hover:text-primary transition-colors">Home</a>
+            <a href="#work" class="mobile-link text-5xl font-black tracking-tighter hover:text-primary transition-colors">Work</a>
+            <a href="about.html" class="mobile-link text-5xl font-black tracking-tighter hover:text-primary transition-colors">About</a>
+            <a href="mallufinance.html" class="mobile-link text-5xl font-black tracking-tighter text-primary">Organisation</a>
+        </div>
+        <div class="mt-auto">
+            <a href="hello.html" class="block w-full text-center py-5 bg-primary text-dark font-black rounded-2xl tracking-widest text-xs">SAY HELLO</a>
+            <div class="flex gap-6 mt-8 justify-center text-xl text-gray-500">
+                <a href="https://github.com/jeswinjoss"><i class="fab fa-github"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="www.instagram.com"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
     </div>
+    <div id="menu-overlay" class="fixed inset-0 bg-black/60 backdrop-blur-sm z-[140] hidden opacity-0 transition-opacity duration-500"></div>
 
     <main>
-        <!-- Hero -->
-        <section id="home" class="min-h-screen flex items-center justify-center px-6 pt-20">
-            <div class="max-w-7xl w-full grid lg:grid-cols-2 gap-20 items-center">
-                <div class="text-center lg:text-left">
-                    <div class="inline-block px-4 py-1.5 glass rounded-full text-[10px] font-bold tracking-[0.3em] text-primary mb-8 uppercase">
+        <!-- Adjusted Padding to prevent header overlap -->
+        <section id="home" class="min-h-screen pt-32 pb-12 flex items-center justify-center px-6">
+            <div class="max-w-7xl w-full grid lg:grid-cols-2 gap-16 items-center">
+                <div class="reveal text-center lg:text-left">
+                    <div class="inline-block px-4 py-1.5 glass rounded-full text-[9px] font-bold tracking-[0.3em] text-primary mb-8 uppercase">
                         Available for new projects
                     </div>
-                    <h1 class="text-6xl md:text-8xl lg:text-9xl font-black mb-10 leading-[0.9] tracking-tighter">
+                    <h1 class="text-6xl md:text-8xl font-black mb-8 leading-[0.9] tracking-tighter">
                         Digital <br/>
                         <span class="gradient-text italic font-normal">Architect.</span>
                     </h1>
-                    <p class="text-gray-400 text-lg md:text-xl mb-12 max-w-lg mx-auto lg:mx-0 leading-relaxed">
-                        Jeswin Jose here — crafting high-octane web experiences where precision meets radical design.
+                    <p class="text-gray-400 text-lg md:text-xl mb-10 max-w-lg mx-auto lg:mx-0 leading-relaxed">
+                        Jeswin Jose here — crafting high-performance web experiences with technical precision.
                     </p>
                     <div class="flex flex-wrap justify-center lg:justify-start gap-6">
-                        <a href="#work" class="px-10 py-5 bg-primary text-dark font-black rounded-2xl hover:bg-white transition-all transform hover:-translate-y-1">
+                        <a href="#work" class="px-8 py-4 bg-primary text-dark font-black rounded-xl hover:scale-105 transition-transform">
                             EXPLORE WORK
                         </a>
                         <div class="flex gap-6 items-center px-4">
-                            <a href="https://github.com/jeswinjoss" class="text-2xl hover:text-primary transition-colors"><i class="fab fa-github"></i></a>
-                            <a href="#" class="text-2xl hover:text-primary transition-colors"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://github.com/jeswinjoss" class="text-xl hover:text-primary transition-colors"><i class="fab fa-github"></i></a>
+                            <a href="#" class="text-xl hover:text-primary transition-colors"><i class="fab fa-linkedin"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="relative flex justify-center lg:justify-end">
-                    <div class="photo-frame w-full max-w-[450px] aspect-[4/5] bg-[#111]">
-                        <img src="jeswin.jpg" alt="Jeswin Jose" class="w-full h-full object-cover grayscale hover:grayscale-0 transition-all duration-700">
+                <div class="reveal relative flex justify-center lg:justify-end" style="transition-delay: 200ms">
+                    <div class="photo-frame w-full max-w-[400px] aspect-[4/5] bg-[#111] shadow-2xl overflow-hidden">
+                        <img src="jeswin.jpg" alt="Jeswin Jose" loading="lazy" class="w-full h-full object-cover transition-transform duration-700 hover:scale-105">
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- Work -->
-        <section id="work" class="py-32 px-6 bg-white/5">
+        <section id="work" class="py-24 px-6">
             <div class="max-w-7xl mx-auto">
-                <div class="mb-20">
-                    <h2 class="text-4xl md:text-7xl font-black mb-4 uppercase">Case Studies</h2>
-                    <p class="text-gray-500 max-w-md">Pushing the boundaries of the web through technical excellence.</p>
+                <div class="reveal mb-16">
+                    <h2 class="text-3xl md:text-5xl font-black mb-4 uppercase tracking-tighter">Selected Work</h2>
+                    <p class="text-gray-500 max-w-sm">Pushing the boundaries of modern development.</p>
                 </div>
 
-                <div class="grid md:grid-cols-2 gap-10">
-                    <!-- Card 1 -->
-                    <div class="project-card glass rounded-[3rem] p-4 group">
-                        <div class="relative aspect-video rounded-[2.5rem] overflow-hidden mb-8">
-                            <img src="mallufinance.jpg" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-1000">
-                            <div class="absolute inset-0 bg-dark/40 opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center">
-                                <span class="px-8 py-3 bg-white text-dark font-bold rounded-full">VIEW CASE</span>
+                <div class="grid md:grid-cols-2 gap-8">
+                    <div class="reveal project-card glass rounded-[2rem] p-4 group">
+                        <div class="relative aspect-video rounded-[1.5rem] overflow-hidden mb-6">
+                            <img src="mallufinance.jpg" loading="lazy" class="w-full h-full object-cover">
+                            <div class="absolute inset-0 bg-dark/60 opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center">
+                                <a href="mallufinance.html" class="px-6 py-2 bg-white text-dark font-bold rounded-full text-xs uppercase">View Project</a>
                             </div>
                         </div>
-                        <div class="px-6 pb-6">
-                            <h3 class="text-3xl font-black mb-4 uppercase tracking-tighter">Mallu Finance</h3>
-                            <div class="flex gap-3">
-                                <span class="text-[10px] font-bold tracking-widest px-4 py-1.5 border border-white/10 rounded-full">FINTECH</span>
-                                <span class="text-[10px] font-bold tracking-widest px-4 py-1.5 border border-white/10 rounded-full">UX DESIGN</span>
-                            </div>
+                        <div class="px-4 pb-4">
+                            <h3 class="text-2xl font-black mb-2">Mallu Finance</h3>
+                            <p class="text-xs text-gray-500 uppercase tracking-widest font-bold">Fintech Solution</p>
                         </div>
                     </div>
-                    <!-- Card 2 -->
-                    <div class="project-card glass rounded-[3rem] p-4 group">
-                        <div class="relative aspect-video rounded-[2.5rem] overflow-hidden mb-8">
-                            <img src="webartnet.jpg" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-1000">
-                            <div class="absolute inset-0 bg-dark/40 opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center">
-                                <span class="px-8 py-3 bg-white text-dark font-bold rounded-full">VIEW CASE</span>
+                    
+                    <div class="reveal project-card glass rounded-[2rem] p-4 group" style="transition-delay: 150ms">
+                        <div class="relative aspect-video rounded-[1.5rem] overflow-hidden mb-6">
+                            <img src="webartnet.jpg" loading="lazy" class="w-full h-full object-cover">
+                            <div class="absolute inset-0 bg-dark/60 opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center">
+                                <span class="px-6 py-2 bg-white text-dark font-bold rounded-full text-xs uppercase">Case Study</span>
                             </div>
                         </div>
-                        <div class="px-6 pb-6">
-                            <h3 class="text-3xl font-black mb-4 uppercase tracking-tighter">AI Workflow</h3>
-                            <div class="flex gap-3">
-                                <span class="text-[10px] font-bold tracking-widest px-4 py-1.5 border border-white/10 rounded-full">SAAS</span>
-                                <span class="text-[10px] font-bold tracking-widest px-4 py-1.5 border border-white/10 rounded-full">AUTOMATION</span>
-                            </div>
+                        <div class="px-4 pb-4">
+                            <h3 class="text-2xl font-black mb-2">AI Ecosystem</h3>
+                            <p class="text-xs text-gray-500 uppercase tracking-widest font-bold">Automation</p>
                         </div>
                     </div>
                 </div>
@@ -149,17 +157,11 @@
         </section>
     </main>
 
-    <footer class="py-20 px-6 border-t border-white/5">
-        <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center gap-10">
-            <div class="text-3xl font-black">J<span class="text-primary">.</span>J</div>
-            <div class="text-[10px] font-bold tracking-[0.5em] text-gray-500 uppercase">
-                &copy; 2026 Jeswin Jose. Handcrafted in Kerala.
-            </div>
-            <div class="flex gap-8 text-xl text-gray-500">
-                <a href="#" class="hover:text-primary transition-colors"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="hover:text-primary transition-colors"><i class="fab fa-instagram"></i></a>
-            </div>
-        </div>
+    <footer class="py-16 px-6 border-t border-white/5 text-center">
+        <div class="text-xl font-black mb-6">J<span class="text-primary">.</span>J</div>
+        <p class="text-[9px] font-bold tracking-[0.4em] text-gray-500 uppercase">
+            &copy; 2026 Jeswin Jose. optimized for experience.
+        </p>
     </footer>
 
     <script src="script.js"></script>
