--- a/mallufinance.html
+++ b/mallufinance.html
@@ -7,132 +7,65 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9630835038502007"
-     crossorigin="anonymous"></script>
 </head>
 <body class="antialiased bg-[#050505] text-white overflow-x-hidden">
-    <!-- Preloader -->
-    <div id="loader" class="fixed inset-0 z-[200] bg-[#050505] flex flex-col justify-center items-center transition-opacity duration-700">
-        <div class="relative w-24 h-24 mb-8">
-            <div class="absolute inset-0 border-2 border-white/10 rounded-full"></div>
-            <div class="absolute inset-0 border-t-2 border-cyan-400 rounded-full animate-spin"></div>
-            <div class="absolute inset-0 flex items-center justify-center text-xs font-bold tracking-widest text-white">
-                <span id="loader-percentage">0</span>%
-            </div>
-        </div>
+    <div id="loader" class="fixed inset-0 z-[200] bg-[#050505] flex justify-center items-center transition-opacity duration-500">
+        <div class="w-12 h-12 border-2 border-white/10 border-t-cyan-400 rounded-full animate-spin"></div>
     </div>
 
-    <!-- Navigation -->
-    <nav class="fixed top-0 left-0 w-full z-[100] px-6 py-4 md:px-12 flex justify-between items-center bg-black/80 backdrop-blur-xl border-b border-white/5 transition-all duration-300">
-        <div class="text-2xl font-bold tracking-tighter">
-            J<span class="gradient-text">.</span>J
+    <nav class="fixed top-0 left-0 w-full z-[100] px-8 py-5 flex justify-between items-center transition-all duration-300">
+        <div class="text-xl font-bold tracking-tighter">
+            <a href="index.html">J<span class="gradient-text">.</span>J</a>
         </div>
-        <div class="hidden md:flex space-x-12 text-xs uppercase tracking-[0.2em] font-medium">
-            <a href="index.html" class="hover:text-cyan-400 transition-colors duration-300">Home</a>
-            <a href="index.html#work" class="hover:text-cyan-400 transition-colors duration-300">Work</a>
-            <a href="index.html#contact" class="hover:text-cyan-400 transition-colors duration-300">Contact</a>
-            <a href="about.html" class="hover:text-cyan-400 transition-colors duration-300">Who am i ?</a>
-         <a href="mallufinance.html" class="text-cyan-400">Organisation</a>
+        <div class="hidden md:flex space-x-10 text-[10px] uppercase tracking-[0.2em] font-medium">
+            <a href="index.html" class="hover:text-cyan-400">Home</a>
+            <a href="about.html" class="hover:text-cyan-400">About</a>
+            <a href="mallufinance.html" class="text-cyan-400">Organisation</a>
         </div>
-        <div class="flex items-center gap-4">
-            <a href="hello.html" class="hidden sm:block text-xs px-6 py-2.5 border border-white/20 rounded-full hover:bg-white hover:text-black transition-all duration-500 text-center">
-                SAY HELLO
-            </a>
-            <button id="mobile-menu-btn" class="md:hidden p-2 text-2xl focus:outline-none">
-                <i class="fa-solid fa-bars-staggered"></i>
-            </button>
-        </div>
+        <a href="hello.html" class="text-[10px] px-6 py-2.5 border border-white/20 rounded-full hover:bg-white hover:text-black transition-all">
+            SAY HELLO
+        </a>
     </nav>
 
-    <!-- Mobile Overlay -->
-    <div id="mobile-menu" class="fixed inset-0 z-[90] bg-black hidden flex flex-col justify-center items-center gap-8 text-3xl font-bold">
-        <a href="index.html" class="hover:text-cyan-400">Home</a>
-        <a href="index.html#work" class="hover:text-cyan-400">Work</a>
-        <a href="index.html#contact" class="hover:text-cyan-400">Contact</a>
-        <a href="about.html" class="hover:text-cyan-400">Who am i ?</a>
-     <a href="mallufinance.html" class="text-cyan-400">Organisation</a>
-        
-        <a href="hello.html" class="text-xl text-cyan-400 border border-cyan-400/30 px-6 py-2 rounded-full">SAY HELLO</a>
-    </div>
-
     <main>
-        <!-- Hero with Faded Image Background -->
-        <section class="relative min-h-[80svh] flex flex-col justify-center items-center px-6 pt-24 overflow-hidden">
-            <!-- Background Image with Half-Fade -->
+        <section class="relative h-[70vh] flex items-center justify-center text-center overflow-hidden">
             <div class="absolute inset-0 z-0">
-                <img src="mallufinance.jpg" alt="Mallu Finance Background" class="w-full h-full object-cover">
-                <div class="absolute inset-0 bg-gradient-to-b from-black/60 via-black/80 to-[#050505]"></div>
+                <img src="mallufinance.jpg" class="w-full h-full object-cover opacity-30 scale-105" alt="bg">
+                <div class="absolute inset-0 bg-gradient-to-b from-[#050505]/80 to-[#050505]"></div>
             </div>
 
-            <div class="relative z-10 max-w-5xl mx-auto text-center">
-                <h2 class="text-cyan-400 font-semibold mb-6 tracking-[0.4em] text-xs md:text-sm uppercase">
-                    Our Flagship Organisation
-                </h2>
-                <h1 class="text-5xl md:text-8xl font-bold mb-8 tracking-tighter">
-                    Mallu Finance <span class="gradient-text">India</span>
-                </h1>
-                <p class="text-gray-300 text-lg md:text-2xl max-w-2xl mx-auto leading-relaxed mb-12">
-                    Empowering the people of Kerala with transparent, accessible, and verified financial solutions.
-                </p>
-                <div class="flex flex-wrap justify-center gap-6">
-                    <div class="glass px-8 py-4 rounded-2xl flex items-center gap-4">
-                        <i class="fa-solid fa-shield-halved text-cyan-400 text-2xl"></i>
-                        <div class="text-left">
-                            <div class="text-xs text-gray-400 uppercase tracking-widest">Status</div>
-                            <div class="font-bold">Verified Partner</div>
-                        </div>
-                    </div>
-                    <div class="glass px-8 py-4 rounded-2xl flex items-center gap-4">
-                        <i class="fa-solid fa-users text-cyan-400 text-2xl"></i>
-                        <div class="text-left">
-                            <div class="text-xs text-gray-400 uppercase tracking-widest">Impact</div>
-                            <div class="font-bold">10,000+ Assisted</div>
-                        </div>
-                    </div>
-                </div>
+            <div class="reveal relative z-10 max-w-4xl px-6">
+                <h2 class="text-cyan-400 font-bold mb-4 tracking-[0.4em] text-[10px] uppercase">Flagship Organisation</h2>
+                <h1 class="text-5xl md:text-8xl font-black mb-6 tracking-tighter">Mallu Finance <span class="gradient-text">India</span></h1>
+                <p class="text-gray-400 text-lg md:text-xl leading-relaxed max-w-2xl mx-auto">Empowering Kerala with transparent, accessible financial solutions.</p>
             </div>
         </section>
 
-        <!-- Mission Section -->
-        <section class="py-24 px-6 relative">
-            <div class="hero-blob top-[20%] left-[5%] bg-cyan-500 opacity-5"></div>
-            <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-16 items-center">
-                <div class="space-y-8">
-                    <h3 class="text-3xl md:text-5xl font-bold tracking-tight">Bridging the gap in <span class="text-cyan-400">Kerala's</span> economy.</h3>
-                    <p class="text-gray-400 text-lg leading-relaxed">
-                        Mallu Finance India was established to solve the complexity of the modern financial landscape. We serve as a dedicated bridge connecting users with verified banking institutions and NBFCs.
-                    </p>
-                    <ul class="space-y-4">
-                        <li class="flex items-center gap-3 text-gray-300">
-                            <i class="fa-solid fa-check text-cyan-400"></i> Secure Loan Processing
-                        </li>
-                        <li class="flex items-center gap-3 text-gray-300">
-                            <i class="fa-solid fa-check text-cyan-400"></i> Credit Card Consultancy
-                        </li>
-                        <li class="flex items-center gap-3 text-gray-300">
-                            <i class="fa-solid fa-check text-cyan-400"></i> Verified Lead Verification
-                        </li>
-                    </ul>
-                </div>
-                <div class="glass p-8 rounded-[2rem] border-white/10">
-                    <div class="aspect-video bg-zinc-900 rounded-xl overflow-hidden mb-6 relative group">
-                         <img src="mallufinance.jpg" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700" alt="Mallu Finance Digital">
-                         <div class="absolute inset-0 flex items-center justify-center bg-black/40">
-                             <div class="w-16 h-16 bg-cyan-400 rounded-full flex items-center justify-center text-black">
-                                 <i class="fa-solid fa-play ml-1"></i>
-                             </div>
-                         </div>
+        <section class="py-24 px-6">
+            <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 items-center">
+                <div class="reveal space-y-8">
+                    <h3 class="text-3xl md:text-5xl font-black leading-tight">Bridging <span class="text-cyan-400">Economy.</span></h3>
+                    <p class="text-gray-400 leading-relaxed">Mallu Finance India connects users with verified banking institutions and NBFCs, simplifying the complex financial landscape through digital innovation.</p>
+                    <div class="grid grid-cols-2 gap-4">
+                        <div class="glass p-4 rounded-xl">
+                            <div class="text-2xl font-black text-cyan-400 mb-1">10K+</div>
+                            <div class="text-[10px] text-gray-500 uppercase font-bold tracking-widest">Assisted</div>
+                        </div>
+                        <div class="glass p-4 rounded-xl">
+                            <div class="text-2xl font-black text-cyan-400 mb-1">Verified</div>
+                            <div class="text-[10px] text-gray-500 uppercase font-bold tracking-widest">Partner</div>
+                        </div>
                     </div>
-                    <h4 class="text-xl font-bold mb-2">Digital First Approach</h4>
-                    <p class="text-sm text-gray-500">We utilize cutting-edge web technologies to ensure that financial data is handled with the highest level of security and performance.</p>
+                </div>
+                <div class="reveal glass rounded-[2.5rem] overflow-hidden p-3">
+                    <img src="mallufinance.jpg" class="rounded-[2rem] w-full h-auto grayscale hover:grayscale-0 transition-all duration-700">
                 </div>
             </div>
         </section>
     </main>
 
-    <footer class="py-12 px-6 border-t border-white/5 text-center">
-        <div class="mb-8 text-xl font-bold">J<span class="gradient-text">.</span>J</div>
-        <p class="text-gray-500 text-[10px] tracking-widest">&copy; 2026 MALLU FINANCE INDIA. AN ORGANISATION BY JESWIN JOSE.</p>
+    <footer class="py-12 border-t border-white/5 text-center">
+        <p class="text-gray-500 text-[9px] tracking-[0.4em]">&copy; 2026 MALLU FINANCE INDIA. BY JESWIN JOSE.</p>
     </footer>
 
     <script src="script.js"></script>
