--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             theme: {
                 extend: {
                     colors: {
-                        primary: '#007AFF', // Professional Apple-style Blue
+                        primary: '#007AFF',
                         accent: '#1D1D1F',
                         light: '#F5F5F7',
                         white: '#FFFFFF'
@@ -26,23 +26,25 @@
         }
     </script>
     <style>
-        body { background-color: #FFFFFF; color: #1D1D1F; }
+        body { background-color: #FFFFFF; color: #1D1D1F; overflow-x: hidden; }
         .glass { background: rgba(255, 255, 255, 0.7); backdrop-filter: blur(20px); border: 1px solid rgba(0,0,0,0.05); }
         .hero-gradient { background: radial-gradient(circle at top right, rgba(0,122,255,0.05) 0%, transparent 50%), radial-gradient(circle at bottom left, rgba(0,122,255,0.03) 0%, transparent 50%); }
-        .text-gradient { background: linear-gradient(135deg, #1D1D1F 0%, #434343 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+        .text-gradient { background: linear-gradient(135deg, #1D1D1F 0%, #434343 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; padding-bottom: 0.15em; line-height: 1.1; display: inline-block; }
         .photo-mask { border-radius: 40px; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.1); }
         .nav-link { position: relative; transition: color 0.3s ease; }
         .nav-link::after { content: ''; position: absolute; bottom: -4px; left: 0; width: 0%; height: 2px; background: #007AFF; transition: width 0.3s ease; }
         .nav-link:hover::after { width: 100%; }
         #loader { background: #FFFFFF; }
+        .nav-hidden { transform: translate(-50%, -200%) scale(0.9); opacity: 0; filter: blur(10px); }
+        .nav-visible { transform: translate(-50%, 0) scale(1); opacity: 1; filter: blur(0px); }
+        .reveal { opacity: 0; transform: translateY(20px); transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1); }
+        .reveal.active { opacity: 1; transform: translateY(0); }
     </style>
 </head>
 <body class="antialiased selection:bg-primary selection:text-white">
     
-    <!-- Professional Background -->
     <div class="fixed inset-0 z-[-1] hero-gradient"></div>
 
-    <!-- Preloader -->
     <div id="loader" class="fixed inset-0 z-[200] flex flex-col justify-center items-center transition-opacity duration-700">
         <div class="relative w-24 h-24">
             <svg class="w-full h-full transform -rotate-90">
@@ -55,12 +57,11 @@
         </div>
     </div>
 
-    <!-- Island Header -->
-    <header class="fixed top-8 left-1/2 -translate-x-1/2 z-[100] w-[90%] max-w-5xl">
-        <nav id="island-nav" class="glass rounded-full px-8 py-4 flex justify-between items-center transition-all duration-500 shadow-sm">
+    <header id="island-header" class="fixed top-6 md:top-8 left-1/2 -translate-x-1/2 z-[100] w-[92%] max-w-5xl transition-all duration-700 ease-[cubic-bezier(0.23,1,0.32,1)]">
+        <nav id="island-nav" class="glass rounded-full px-5 md:px-8 py-3 md:py-4 flex justify-between items-center transition-all duration-500 shadow-sm">
             <div class="text-xl font-black tracking-tighter">
                 <a href="index.html" class="flex items-center gap-2">
-                    <span class="bg-accent text-white w-8 h-8 flex items-center justify-center rounded-lg">J</span>
+                    <span class="bg-accent text-white w-10 h-8 flex items-center justify-center rounded-lg text-sm font-bold tracking-normal">J.J</span>
                     <span class="hidden sm:block uppercase tracking-widest text-[10px] font-logo">Jose</span>
                 </a>
             </div>
@@ -81,7 +82,6 @@
         </nav>
     </header>
 
-    <!-- Mobile Menu -->
     <div id="mobile-menu" class="fixed inset-y-0 right-0 w-full sm:w-[400px] z-[150] bg-white/95 backdrop-blur-3xl translate-x-full transition-transform duration-700 flex flex-col p-12 shadow-2xl">
         <div class="flex justify-between items-center mb-16">
             <span class="text-[10px] font-bold tracking-widest text-accent/40 uppercase">Menu</span>
@@ -90,10 +90,10 @@
             </button>
         </div>
         <div class="flex flex-col gap-8">
-            <a href="#home" class="text-4xl font-black tracking-tight hover:text-primary transition-colors">Home</a>
-            <a href="#work" class="text-4xl font-black tracking-tight hover:text-primary transition-colors">Work</a>
-            <a href="about.html" class="text-4xl font-black tracking-tight hover:text-primary transition-colors">About</a>
-            <a href="mallufinance.html" class="text-4xl font-black tracking-tight text-primary">Organisation</a>
+            <a href="#home" class="mobile-link text-4xl font-black tracking-tight hover:text-primary transition-colors">Home</a>
+            <a href="#work" class="mobile-link text-4xl font-black tracking-tight hover:text-primary transition-colors">Work</a>
+            <a href="about.html" class="mobile-link text-4xl font-black tracking-tight hover:text-primary transition-colors">About</a>
+            <a href="mallufinance.html" class="mobile-link text-4xl font-black tracking-tight text-primary">Organisation</a>
         </div>
         <div class="mt-auto">
             <div class="flex gap-6 mb-10 text-xl text-accent/30">
@@ -106,18 +106,18 @@
     <div id="menu-overlay" class="fixed inset-0 bg-accent/20 backdrop-blur-sm z-[140] hidden opacity-0 transition-opacity duration-500"></div>
 
     <main>
-        <section id="home" class="min-h-screen pt-40 pb-20 flex items-center justify-center px-6">
-            <div class="max-w-7xl w-full grid lg:grid-cols-12 gap-16 items-center">
+        <section id="home" class="min-h-screen pt-40 md:pt-48 pb-20 flex items-center justify-center px-6">
+            <div class="max-w-7xl w-full grid lg:grid-cols-12 gap-10 md:gap-16 items-center">
                 <div class="reveal lg:col-span-7">
                     <div class="inline-flex items-center gap-3 px-4 py-2 bg-primary/5 rounded-full text-[10px] font-bold tracking-widest text-primary mb-8 uppercase border border-primary/10">
                         <span class="flex h-1.5 w-1.5 rounded-full bg-primary animate-pulse"></span>
                         Available for new projects
                     </div>
-                    <h1 class="text-6xl md:text-8xl font-black mb-8 leading-[0.9] tracking-tighter text-gradient">
-                        Building <br/>
-                        Digital <span class="text-primary">Value.</span>
+                    <h1 class="text-5xl md:text-8xl font-black mb-8 tracking-tighter">
+                        <span class="text-gradient block">Building Digital</span>
+                        <span class="text-primary">Value.</span>
                     </h1>
-                    <p class="text-accent/60 text-lg md:text-xl mb-12 max-w-xl leading-relaxed">
+                    <p class="text-accent/60 text-base md:text-xl mb-12 max-w-xl leading-relaxed">
                         Senior Digital Architect specializing in creating <span class="text-accent font-semibold">minimalist interfaces</span> and <span class="text-accent font-semibold">robust infrastructures</span> for modern brands.
                     </p>
                     <div class="flex flex-wrap gap-6 items-center">
@@ -130,10 +130,10 @@
                     </div>
                 </div>
                 <div class="reveal lg:col-span-5 relative">
-                    <div class="photo-mask aspect-[4/5] max-w-[400px] ml-auto overflow-hidden bg-light">
+                    <div class="photo-mask aspect-[4/5] max-w-full md:max-w-[400px] ml-auto overflow-hidden bg-light">
                         <img src="jeswin.jpg" alt="Jeswin Jose" class="w-full h-full object-cover mix-blend-multiply opacity-90">
                     </div>
-                    <div class="absolute -bottom-4 -left-4 glass p-6 rounded-3xl shadow-xl">
+                    <div class="absolute -bottom-4 -left-4 glass p-4 md:p-6 rounded-3xl shadow-xl">
                         <div class="text-2xl font-black text-primary">05+</div>
                         <div class="text-[8px] tracking-[0.2em] uppercase font-bold text-accent/40">Years of Excellence</div>
                     </div>
@@ -141,53 +141,42 @@
             </div>
         </section>
 
-        <section id="work" class="py-32 px-6 bg-light/50">
+        <section id="work" class="py-24 md:py-32 px-6 bg-light/50 relative z-10">
             <div class="max-w-7xl mx-auto">
                 <div class="reveal flex flex-col md:flex-row md:items-end justify-between mb-20 gap-8">
                     <div class="max-w-xl">
                         <span class="text-[10px] font-bold tracking-[0.4em] text-primary uppercase mb-4 block">Selected Work</span>
                         <h2 class="text-4xl md:text-5xl font-black tracking-tighter text-accent">Crafting products that <br/>solve problems.</h2>
                     </div>
-                    <div class="hidden md:block">
-                        <div class="w-16 h-16 rounded-full border border-accent/10 flex items-center justify-center">
-                            <i class="fa-solid fa-arrow-down-long text-accent/20"></i>
-                        </div>
-                    </div>
                 </div>
 
-                <div class="grid md:grid-cols-2 gap-10">
-                    <div class="reveal bg-white rounded-[2.5rem] p-4 group transition-all duration-500 hover:shadow-2xl hover:shadow-accent/5 border border-black/5">
-                        <div class="relative aspect-[16/11] rounded-[2rem] overflow-hidden mb-8 bg-light">
+                <div class="grid md:grid-cols-2 gap-8 md:gap-10">
+                    <div class="reveal bg-white rounded-[2rem] md:rounded-[2.5rem] p-4 group transition-all duration-500 hover:shadow-2xl hover:shadow-accent/5 border border-black/5">
+                        <div class="relative aspect-[16/11] rounded-[1.5rem] md:rounded-[2rem] overflow-hidden mb-6 md:mb-8 bg-light">
                             <img src="mallufinance.jpg" class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-700 group-hover:scale-105">
                             <div class="absolute inset-0 bg-accent/40 opacity-0 group-hover:opacity-100 transition-all flex items-center justify-center backdrop-blur-sm">
                                 <a href="mallufinance.html" class="px-8 py-3 bg-white text-accent font-bold rounded-full text-[10px] uppercase shadow-xl">Case Study</a>
                             </div>
                         </div>
-                        <div class="px-6 pb-4 flex justify-between items-center">
+                        <div class="px-4 md:px-6 pb-4 flex justify-between items-center">
                             <div>
                                 <p class="text-[9px] font-bold text-primary uppercase tracking-[0.3em] mb-2">Fintech</p>
                                 <h3 class="text-2xl font-bold tracking-tight">Mallu Finance</h3>
                             </div>
-                            <div class="w-10 h-10 rounded-full border border-accent/5 flex items-center justify-center group-hover:bg-primary group-hover:text-white transition-all">
-                                <i class="fa-solid fa-chevron-right text-xs"></i>
-                            </div>
                         </div>
                     </div>
                     
-                    <div class="reveal bg-white rounded-[2.5rem] p-4 group transition-all duration-500 hover:shadow-2xl hover:shadow-accent/5 border border-black/5">
-                        <div class="relative aspect-[16/11] rounded-[2rem] overflow-hidden mb-8 bg-light">
+                    <div class="reveal bg-white rounded-[2rem] md:rounded-[2.5rem] p-4 group transition-all duration-500 hover:shadow-2xl hover:shadow-accent/5 border border-black/5">
+                        <div class="relative aspect-[16/11] rounded-[1.5rem] md:rounded-[2rem] overflow-hidden mb-6 md:mb-8 bg-light">
                             <img src="webartnet.jpg" class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-700 group-hover:scale-105">
                             <div class="absolute inset-0 bg-accent/40 opacity-0 group-hover:opacity-100 transition-all flex items-center justify-center backdrop-blur-sm">
                                 <span class="px-8 py-3 bg-white text-accent font-bold rounded-full text-[10px] uppercase shadow-xl">Live Soon</span>
                             </div>
                         </div>
-                        <div class="px-6 pb-4 flex justify-between items-center">
+                        <div class="px-4 md:px-6 pb-4 flex justify-between items-center">
                             <div>
                                 <p class="text-[9px] font-bold text-primary uppercase tracking-[0.3em] mb-2">AI & Automation</p>
                                 <h3 class="text-2xl font-bold tracking-tight">AI Ecosystem</h3>
-                            </div>
-                            <div class="w-10 h-10 rounded-full border border-accent/5 flex items-center justify-center group-hover:bg-primary group-hover:text-white transition-all">
-                                <i class="fa-solid fa-chevron-right text-xs"></i>
                             </div>
                         </div>
                     </div>
@@ -196,15 +185,15 @@
         </section>
     </main>
 
-    <footer class="py-24 px-6 border-t border-accent/5 bg-white">
+    <footer class="py-24 px-6 border-t border-accent/5 bg-white relative z-10">
         <div class="max-w-7xl mx-auto flex flex-col items-center text-center">
             <div class="text-2xl font-black mb-12 tracking-tighter">J<span class="text-primary">.</span>J</div>
-            <div class="flex gap-12 mb-16 text-[10px] font-bold tracking-[0.3em] uppercase text-accent/40">
+            <div class="flex flex-wrap justify-center gap-8 md:gap-12 mb-16 text-[10px] font-bold tracking-[0.3em] uppercase text-accent/40">
                 <a href="#home" class="hover:text-primary transition-colors">Home</a>
                 <a href="#work" class="hover:text-primary transition-colors">Work</a>
                 <a href="about.html" class="hover:text-primary transition-colors">About</a>
             </div>
-            <p class="text-[10px] font-medium tracking-widest text-accent/30 uppercase">
+            <p class="text-[10px] font-medium tracking-widest text-accent/30 uppercase px-4">
                 &copy; 2026 Jeswin Jose &mdash; Built with Precision in Kerala
             </p>
         </div>
