--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <span class="inline-block text-[10px] font-bold tracking-[0.3em] uppercase text-accent">Multidisciplinary Designer</span>
                     </div>
                     <h1 class="text-6xl md:text-8xl lg:text-9xl font-heading font-bold mb-8 leading-[1.1] text-slate-900 tracking-tight">
-                        Building <span class="italic text-slate-400">digital</span> architectural excellence.
+                        Building <span class="italic text-slate-400">digital</span>excellence.
                     </h1>
                     <p class="text-slate-500 text-lg md:text-xl mb-12 max-w-2xl mx-auto font-light leading-relaxed">
                         Strategic design and robust engineering for the next generation of digital products. Focused on clarity, purpose, and performance.
